# typereplike

./: .gitmodules  README.md  typereplike.cabal
src/Data/: TypeRepLike.hs
src/Data/TypeRepLike/: STypeRep.hs  TypeArity.hs  TypeRepLike.hs
tests/: MainTestSuite.hs
tests/Data/TypeRepLike/: Test.hs
