name: typereplike
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: BSD3
license-file: "LICENSE"
author: eric
data-dir: ""
synopsis: Serializable form of TypeRep
library
    build-depends: base >=4, aeson >=0.8 && <0.9, text >=1.1 && <1.2,
                   tagged >=0.7 && <0.8, containers >=0.5 && <0.6,
                   Peano >=0.0.1 && <1.0, peano-extras >=0.1 && <1.0,
                   mtl >=2.1 && <=2.3
    exposed-modules: Data.TypeRepLike Data.TypeRepLike.STypeRep
                     Data.TypeRepLike.TypeRepLike Data.TypeRepLike.TypeArity
    exposed: True
    buildable: True
    extensions: MultiParamTypeClasses RankNTypes ScopedTypeVariables
                FlexibleContexts FlexibleInstances EmptyDataDecls TypeFamilies
                TypeOperators OverloadedStrings DeriveDataTypeable DeriveFunctor
                DeriveTraversable DeriveFoldable
    hs-source-dirs: src
    ghc-options: -Wall

