name: typereplike
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: BSD3
author: eric
data-dir: ""
synopsis: Serializable form of TypeRep
library
    build-depends: base >=4, aeson >=0.8 && <0.9, text >=1.1 && <1.2,
                   tagged >=0.7 && <0.8, containers >=0.5 && <0.6,
                   Peano >=0.0.1 && <1.0, peano-extras >=0.1 && <1.0,
                   mtl >=2.1 && <=2.3
    exposed-modules: Data.TypeRepLike Data.TypeRepLike.STypeRep
                     Data.TypeRepLike.TypeRepLike Data.TypeRepLike.TypeArity
    exposed: True
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall

test-suite typereplike-tests
  type:exitcode-stdio-1.0
  hs-source-dirs: tests, src
  main-is: MainTestSuite.hs
  build-depends: base >=4, aeson >=0.8 && <0.9, text >=1.1 && <1.2,
                 tagged >=0.7 && <0.8, containers >=0.5 && <0.6,
                 Peano >=0.0.1 && <1.0, peano-extras >=0.1 && <1.0,
                 mtl >=2.1 && <=2.3, HUnit, QuickCheck, test-framework,
                 test-framework-hunit, test-framework-quickcheck2
